--- a/app/public/index.html
+++ b/app/public/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A E-Commerce site for clothings and suitings"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>React App</title>
+    <title>FullyCart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
